src/test/compile-fail/alt-arrows-block-then-binop.rs
fn main() {

    alt 0 {
      0 => {
      } + 5 //~ ERROR unexpected token: `+`
    }
}